charts/applications/nginx-example/templates/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-example
  name: nginx-example
  namespace: nginx-example
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-example
  type: ClusterIP
